# Kaguya

./: .clang-format  .gitattributes  .gitignore  .gitignore.REMOVED.git-id  .gitmodules  .gitmodules.REMOVED.git-id  CMakeLists.txt  CMakeLists.txt.REMOVED.git-id  LICENSE  README.md  README.md.REMOVED.git-id  README.md.REMOVED.git-id.REMOVED.git-id  Setup.bat  Setup.bat.REMOVED.git-id  imgui.ini
Kaguya/: CMakeLists.txt  CMakeLists.txt.REMOVED.git-id.REMOVED.git-id  CornellBox.yaml.REMOVED.git-id.REMOVED.git-id  Github.yaml.REMOVED.git-id  Hyperion.yaml.REMOVED.git-id.REMOVED.git-id  HyperionWith2PointLights.yaml.REMOVED.git-id.REMOVED.git-id  HyperionWithDragon.yaml.REMOVED.git-id.REMOVED.git-id  Test.yaml.REMOVED.git-id.REMOVED.git-id  cornell-box.yaml.REMOVED.git-id.REMOVED.git-id  main.cpp  main.cpp.REMOVED.git-id  main.cpp.REMOVED.git-id.REMOVED.git-id  pch.cpp.REMOVED.git-id  pch.h  pch.h.REMOVED.git-id  pch.h.REMOVED.git-id.REMOVED.git-id
Kaguya/Core/: Application.cpp  Application.cpp.REMOVED.git-id  Application.cpp.REMOVED.git-id.REMOVED.git-id  Application.h  Application.h.REMOVED.git-id  Application.h.REMOVED.git-id.REMOVED.git-id  Console.cpp  Console.h  Core.h.REMOVED.git-id  CoreDefines.h  CoreException.cpp  CoreException.h  Delegate.h.REMOVED.git-id.REMOVED.git-id  Event.cpp.REMOVED.git-id  Event.h.REMOVED.git-id.REMOVED.git-id  EventDispatcher.cpp.REMOVED.git-id.REMOVED.git-id  EventDispatcher.h.REMOVED.git-id  EventReceiver.cpp.REMOVED.git-id.REMOVED.git-id  EventReceiver.h.REMOVED.git-id  Exception.cpp  Exception.cpp.REMOVED.git-id.REMOVED.git-id  Exception.h  Exception.h.REMOVED.git-id  Exception.h.REMOVED.git-id.REMOVED.git-id  Handle.cpp.REMOVED.git-id  Handle.h.REMOVED.git-id  InputHandler.cpp  InputHandler.cpp.REMOVED.git-id  InputHandler.cpp.REMOVED.git-id.REMOVED.git-id  InputHandler.h  InputHandler.h.REMOVED.git-id  InputHandler.h.REMOVED.git-id.REMOVED.git-id  InterfaceID.h.REMOVED.git-id  Keyboard.cpp  Keyboard.cpp.REMOVED.git-id.REMOVED.git-id  Keyboard.h  Keyboard.h.REMOVED.git-id.REMOVED.git-id  Log.cpp  Log.cpp.REMOVED.git-id  Log.cpp.REMOVED.git-id.REMOVED.git-id  (+37 more)
Kaguya/Core/Allocator/: VariableSizedAllocator.cpp.REMOVED.git-id.REMOVED.git-id  VariableSizedAllocator.h.REMOVED.git-id.REMOVED.git-id
Kaguya/Core/Memory/: LinearAllocator.cpp.REMOVED.git-id  LinearAllocator.h.REMOVED.git-id
Kaguya/Core/Synchronization/: ConditionVariable.h  ConditionVariable.h.REMOVED.git-id  CriticalSection.h  CriticalSection.h.REMOVED.git-id  RWLock.h  RWLock.h.REMOVED.git-id
Kaguya/Graphics/: AssetManager.cpp  AssetManager.cpp.REMOVED.git-id  AssetManager.cpp.REMOVED.git-id.REMOVED.git-id  AssetManager.h  AssetManager.h.REMOVED.git-id  AssetManager.h.REMOVED.git-id.REMOVED.git-id  BufferManager.cpp.REMOVED.git-id.REMOVED.git-id  BufferManager.h.REMOVED.git-id  Camera.h.REMOVED.git-id.REMOVED.git-id  DXGIManager.cpp.REMOVED.git-id.REMOVED.git-id  DXGIManager.h.REMOVED.git-id  Editor.cpp.REMOVED.git-id  Editor.cpp.REMOVED.git-id.REMOVED.git-id  Editor.h.REMOVED.git-id  Editor.h.REMOVED.git-id.REMOVED.git-id  GpuBufferAllocator.cpp.REMOVED.git-id.REMOVED.git-id  GpuBufferAllocator.h.REMOVED.git-id  GpuBufferAllocator.h.REMOVED.git-id.REMOVED.git-id  GpuScene.cpp.REMOVED.git-id  GpuScene.cpp.REMOVED.git-id.REMOVED.git-id  GpuScene.h.REMOVED.git-id  GpuScene.h.REMOVED.git-id.REMOVED.git-id  GpuSceneAllocator.cpp.REMOVED.git-id  GpuSceneAllocator.h.REMOVED.git-id  GpuTextureAllocator.cpp.REMOVED.git-id.REMOVED.git-id  GpuTextureAllocator.h.REMOVED.git-id.REMOVED.git-id  Gui.cpp.REMOVED.git-id.REMOVED.git-id  Gui.h.REMOVED.git-id  Light.cpp.REMOVED.git-id.REMOVED.git-id  Material.h.REMOVED.git-id  MaterialLoader.cpp.REMOVED.git-id  MaterialLoader.h.REMOVED.git-id  Mesh.cpp.REMOVED.git-id.REMOVED.git-id  Mesh.h.REMOVED.git-id  MeshInstance.cpp.REMOVED.git-id.REMOVED.git-id  ModelAllocator.cpp.REMOVED.git-id  ModelAllocator.h.REMOVED.git-id  PathIntegrator.cpp  PathIntegrator.cpp.REMOVED.git-id.REMOVED.git-id  PathIntegrator.h  (+89 more)
Kaguya/Graphics/AL/: AbstractionLayer.h.REMOVED.git-id  BlendState.cpp.REMOVED.git-id.REMOVED.git-id  BlendState.h.REMOVED.git-id.REMOVED.git-id  Buffer.h.REMOVED.git-id.REMOVED.git-id  Buffer.inl.REMOVED.git-id  DepthStencilState.cpp.REMOVED.git-id.REMOVED.git-id  Heap.cpp.REMOVED.git-id.REMOVED.git-id  Heap.h.REMOVED.git-id  InputLayout.cpp.REMOVED.git-id.REMOVED.git-id  InputLayout.h.REMOVED.git-id  RasterizerState.cpp.REMOVED.git-id.REMOVED.git-id  RasterizerState.h.REMOVED.git-id.REMOVED.git-id  Resource.cpp.REMOVED.git-id.REMOVED.git-id  Resource.h.REMOVED.git-id.REMOVED.git-id  Texture.h.REMOVED.git-id
Kaguya/Graphics/API/: AbstractionLayer.cpp.REMOVED.git-id.REMOVED.git-id  AbstractionLayer.h.REMOVED.git-id  BlendState.cpp.REMOVED.git-id.REMOVED.git-id  BlendState.h.REMOVED.git-id.REMOVED.git-id  DepthStencilState.cpp.REMOVED.git-id.REMOVED.git-id  DepthStencilState.h.REMOVED.git-id.REMOVED.git-id  RasterizerState.cpp.REMOVED.git-id.REMOVED.git-id  RasterizerState.h.REMOVED.git-id.REMOVED.git-id
Kaguya/Graphics/Asset/: AssetCache.cpp.REMOVED.git-id  (+16 more)
Kaguya/Math/: MathLibrary.cpp.REMOVED.git-id  MathLibrary.cpp.REMOVED.git-id.REMOVED.git-id  MathLibrary.h.REMOVED.git-id.REMOVED.git-id  Transform.cpp.REMOVED.git-id.REMOVED.git-id  Transform.h.REMOVED.git-id
Kaguya/Shaders/: BRDFIntegration_PS.hlsl.REMOVED.git-id.REMOVED.git-id  BlinnPhong_PS.hlsl.REMOVED.git-id.REMOVED.git-id  Default_VS.hlsl.REMOVED.git-id.REMOVED.git-id  EquirectangularToCubeMap_CS.hlsl.REMOVED.git-id.REMOVED.git-id  IrradianceConvolution_PS.hlsl.REMOVED.git-id.REMOVED.git-id  Light.hlsli.REMOVED.git-id  PBR.hlsli.REMOVED.git-id.REMOVED.git-id  Shadow_VS.hlsl.REMOVED.git-id  SobelComposite_PS.hlsl.REMOVED.git-id  StaticSamplers.hlsli.REMOVED.git-id  ToneMapping_PS.hlsl.REMOVED.git-id.REMOVED.git-id  VerticalBlur_CS.hlsl.REMOVED.git-id.REMOVED.git-id
Kaguya/Template/: Pool.h.REMOVED.git-id  Pool.inl.REMOVED.git-id  Pool.inl.REMOVED.git-id.REMOVED.git-id
Source/: CMakeLists.txt  main.cpp  pch.h
Source/Application/: CMakeLists.txt
Source/Engine/: CMakeLists.txt
(+1772 files in other folders)
